--- a/css/style.css
+++ b/css/style.css
@@ -67,8 +67,9 @@ img {
 .Wrapper {
   max-width: 1920px;
   width: 100%;
+  height: 100vh;
   margin: 0 auto;
-  overflow: hidden;
+  overflow-x: hidden;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
 }
@@ -78,9 +79,13 @@ img {
   background-size: cover;
 }
 
+.Main {
+  margin-bottom: 2rem;
+}
+
 .Content {
   padding: 2rem;
-  overflow: hidden;
+  position: relative;
 }
 
 .Logo__img {
@@ -94,14 +99,52 @@ img {
 .List {
   list-style: none;
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+  margin: 0;
+  padding: 0;
+  grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
+  grid-gap: 2rem;
 }
 
 .List__item {
   background: #ccc;
+  padding: 5px;
 }
 
 .List__img {
   background: #ccc;
   width: 100%;
+}
+
+.Link__text {
+  color: var(--dark-purple);
+}
+
+.Footer {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+  width: 100%;
+  grid-gap: 2rem;
+  position: fixed;
+  bottom: 0;
+}
+
+@media screen and (max-width: 968px) {
+  .Wrapper {
+    grid-template-columns: 120px 1fr;
+  }
+}
+
+@media screen and (max-width: 496px) {
+  body {
+    font-size: 14px;
+  }
+  .Title {
+    font-size: 2rem;
+  }
+  .Wrapper {
+    grid-template-columns: 20px 1fr;
+  }
+  .Link__text {
+    font-size: 14px;
+  }
 }
